# rusoftTest

./: .gitignore  README.md  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 7c2c994b32e7_init.py
src/rusoft/: main.py
src/rusoft/application/: container.py
src/rusoft/application/dto/: products.py
src/rusoft/application/providers/: __init__.py  database.py  use_cases.py
src/rusoft/application/use_cases/products/: __init__.py  add_image.py  add_products.py  delete_products.py  get_products.py  replace_products.py
src/rusoft/config/: __init__.py  provider.py  schema.py
src/rusoft/domain/contracts/database/: __init__.py
src/rusoft/domain/contracts/database/repositories/: __init__.py  products.py
src/rusoft/domain/entities/: __init__.py  product.py
src/rusoft/domain/entities/enums/: __init__.py
src/rusoft/infrastructure/databases/postgres/: __init__.py  base.py  enums.py  models.py  postgres.py
src/rusoft/infrastructure/databases/postgres/gateways/: __init__.py  products.py
src/rusoft/presentation/: __init__.py  api.py
src/rusoft/presentation/routes/: __init__.py  products.py
src/rusoft/presentation/schemas/: __init__.py  products.py
src/rusoft/presentation/schemas/enums/: __init__.py  weights.py
